--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
  /* Nav links  */
- a.one:link {color:white;text-decoration:none;} 
+ a.one:link {color:white;text-decoration:none;text-align: center;justify-content:space-around;;} 
  a.one:hover {text-decoration:underline;}
 
 /* Nav links end */  
